# yaps

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  Taskfile.yaml  Taskfile.yml  docker-compose.yml  example.env
migrations/2019-03-11-175926_documents/: down.sql  up.sql
migrations/2019-03-15-082816_users/: up.sql
src/: aaa.rs  main.rs  model.rs  schema.rs
static/: prism.css  prism.js  style.css
templates/: 404.hbs  base.hbs  document.hbs  login.hbs  login_page.hbs  new.hbs
