[package]
name = "yaps"
version = "0.1.0"
authors = ["Barnaby Keene <hello@southcla.ws>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
rocket = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "serve"]