[package]
name = "yaps"
version = "0.1.0"
authors = ["Barnaby Keene <hello@southcla.ws>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
rocket = "0.4.0"
rocket_contrib = { version = "*", default-features = false, features = ["handlebars_templates", "serve", "diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.39" }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"